Documentation help messages
Added footer message in documentation.

--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -280,5 +280,13 @@
   </li>
 </ul>
 
+
+<hr />
+
+<div>
+  Couldn't find what you were looking for? Try asking about it in our <a href="http://ugui.reddit.com">forum on Reddit</a> (email not required to create an account). Find a typo or mistake on this page? Let us know on our <a href="https://github.com/UniversalGUI/UniversalGUI.github.io/issues">GitHub repository's issues page</a>.
+</div>
+
+
 </div> <!--/wrapper -->
 <div class="footerpadding"></div>
