fixed up homepage styles
matches a ugui coming soon page a little better now.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
   <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                  />
   <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
   <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
   <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <style>#ieWarning{display:block!important;}</style>
@@ -71,9 +72,6 @@
               <li><a href="#About">About</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="#" class="btn btn-warning">Get UGUI</a>
-              </li>
               <li><a href="#githubFork">Fork on Github</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -91,24 +89,25 @@
             </div>
           </div>
           <div class="container col-lg-6 col-md-6 col-sm-3">
-            <h1>UGUI</h1>
+            <h1><img src="_img/logo.png" alt="UGUI Logo" class="main-logo" /></h1>
             <h3 id="subheading">The Universal Graphical User Interface</h3>
-            <p class="text-muted">Give a face to the command line using HTML, CSS, & JavaScript</p>
+            <p class="text-muted">Give a face to the command line using HTML, CSS, &amp; JavaScript.</p>
+            <p>UGUI is a framework for <a href="http://nwjs.io" target="_blank">NW.js</a> designed to make creating GUI's for command line based applications super easy!</p>
             <a class="btn btn-warning text-center">Download</a>
           </div>
         </div>
       </section>
 
       <div id="threeIcons" class="row text-center/">
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
           <img src="_img/icon_Fast.svg" alt="Fast" />
           <h3>Fast</h3>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
           <img src="_img/icon_Free.svg" alt="Free" />
           <h3>Free &amp; Open Source</h3>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
           <img src="_img/icon-CrossPlatform.svg" alt="Cross Platform" />
           <h3>Cross-Platform</h3>
         </div>
