Logo now links to repo

--- a/index.dev.html
+++ b/index.dev.html
@@ -142,7 +142,7 @@
     <table class="tmp">
       <tr>
         <td>
-          <img src="_img/logo.png" alt="UGUI Logo" />
+          <a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a>
           <h3>Universal Graphical User Interface</h3>
           <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
           <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
