--- a/index.dev.html
+++ b/index.dev.html
@@ -5,7 +5,7 @@
     <title>UGUI: A Universal GUI for CLI Applications</title>
     <meta charset="UTF-8"                                                                                   />
     <meta name="description"                     content="UGUI gives a face to the command line, and that face is HTML, CSS, and JavaScript" />
-    <meta name="keywords"                        content="UGUI, Universal GUI, Universal Graphical User Interface, Command Line Interface, CLI, terminal, command prompt, dos prompt, node-webkit, nwjs, desktop application, web technology, easy, fast, development, dev tools, cross-platform" />
+    <meta name="keywords"                        content="UGUI, Universal GUI, Universal Graphical User Interface, Command Line Interface, framework, nw.js, CLI, terminal, command prompt, dos prompt, node-webkit, nwjs, desktop application, web technology, easy, fast, development, dev tools, cross-platform" />
     <meta http-equiv="Expires"                   content="0"                                                />
     <meta name="viewport"                        content="width=device-width, initial-scale=1.0"            />
     <meta name="subject"                         content="Software Development"                             />
@@ -39,138 +39,10 @@
     <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                  />
     <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
-    <link href="http://fonts.googleapis.com/css?family=Teko:300"          type="text/css"  rel="stylesheet" />
-    <style>
-      *,
-      *:before,
-      *:after {
-        -webkit-box-sizing: border-box;
-           -moz-box-sizing: border-box;
-                box-sizing: border-box;
-      }
-      ::-webkit-scrollbar {
-          width: 14px;
-      }
-      ::-webkit-scrollbar-button {
-          background: #ED8C2B;
-          height: 18px;
-      }
-      ::-webkit-scrollbar-track-piece:vertical {
-        background-color: #2B2728;
-      }
-      ::-webkit-scrollbar-thumb:vertical {
-        background: #911146;
-      }
-      html,
-      body {
-          width: 100%;
-          height: 100%;
-          border: 0px;
-          margin: 0px;
-          padding: 0px;
-          font-family: sans-serif;
-      }
-      body{
-          background-attachment: fixed;
-          background: -webkit-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
-             background: -moz-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
-              background: -ms-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
-               background: -o-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
-                  background: radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
-          position: relative;
-          background-size: 1000px 400px;
-          background-position: center -65px;
-          background-repeat: no-repeat;
-          font-family: sans-serif;
-          overflow: auto;
-          color: #A6A5BA;
-      }
-      a {
-          color: #D5A8A3;
-          font-weight: bold;
-          text-decoration: none;
-      }
-      a:hover {
-          color: #F5C8C3;
-          text-shadow: 0px 3px 10px rgba(255,255,255,0.35);
-      }
-      .tmp,
-      .tmp tr,
-      .tmp td {
-          width: 100%;
-          height: 100%;
-          border: 0px;
-          margin: 0px;
-          padding: 0px;
-          text-align: center;
-          vertical-align: top;
-          line-height: 1.1em;
-      }
-      .tmp {
-          padding: 20px;
-          background-image: url('_img/noise.png');
-      }
-      .tmp td {
-          padding: 125px 0px
-      }
-      img { max-width: 100%; }
-      h3 {
-          font-family: "Teko", sans-serif;
-          font-size: 27px;
-          font-weight: bold;
-          letter-spacing: 2px;
-          margin: 14px 0px 0px 0px;
-          color: #F9B88F;
-      }
-      @-webkit-keyframes dawn {
-        0% {   background-size: 1000px 0px;   }
-        100% { background-size: 1000px 400px; } }
-      @keyframes dawn {
-        0% {   background-size: 1000px 0px;   }
-        100% { background-size: 1000px 400px; } }
-      .dawn {
-        -webkit-animation-duration: 8s;
-                animation-duration: 8s;
-        -webkit-animation-fill-mode: both;
-                animation-fill-mode: both;
-        -webkit-animation-name: dawn;
-                animation-name: dawn;
-      }
-      .btn {
-          position: relative;
-          display: inline-block;
-          background-color: #911146;
-          border-radius: 5px;
-          margin: 20px;
-          padding: 15px 25px;
-          color: #F9B88F;
-          font-family: 'Teko', Sans-Serif;
-          font-size: 22px;
-          text-decoration: none;
-          box-shadow: 0px 5px 0px 0px #5D0A2C;
-      }
-      .btn:active {
-          transform: translate(0px, 5px);
-          -webkit-transform: translate(0px, 5px);
-          box-shadow: 0px 1px 0px 0px #5D0A2C;
-      }
-      .btn:hover {
-          background-color: #AF1052;
-          color: #F5C8C3;
-      }
-      .btn svg {
-          position: relative;
-          top: 2px;
-          right: 4px;
-          fill: #F9B88F;
-      }
-      .btn:hover svg {
-          fill: #F5C8C3;
-      }
-    </style>
+    <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
   </head>
-  <body class="dawn">
-    <table class="tmp">
+  <body class="d">
+    <table class="t">
       <tr>
         <td>
           <a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a>
@@ -178,7 +50,7 @@
           <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
           <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
           <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
-          <a href="https://github.com/UniversalGUI/UGUI/releases/download/v1.1.0/ugui_1.1.0.zip" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI v1.1.0</a>
+          <a href="https://github.com/UniversalGUI/UGUI/releases/download/v1.1.0/ugui_1.1.0.zip" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI v1.1.0</a>
         </td>
       </tr>
     </table>
