--- a/index.dev.html
+++ b/index.dev.html
@@ -51,6 +51,7 @@
           <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
           <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
           <a href="https://github.com/UniversalGUI/UGUI/releases/download/v1.1.1/ugui_1.1.1.zip" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI v1.1.1</a>
+          <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
         </td>
       </tr>
     </table>
