Dynamic downloads page

--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -92,7 +92,7 @@
   <span class="filter-nov">Once you know if your OS is 32&#8209;Bit or 64&#8209;Bit, download the correct version of <a href="http://nwjs.io" target="_blank">NW.js</a>. </span>
 </p>
 <p>
-  <span class="filter-nov">Then download a copy of <a href="http://ugui.io/#/download">UGUI</a>. After you extract the UGUI project folder from the zipped archive, you should rename the UGUI folder to whatever your project name is.</span>
+  <span class="filter-nov">Then download a copy of <a href="http://ugui.io/download.html">UGUI</a>. After you extract the UGUI project folder from the zipped archive, you should rename the UGUI folder to whatever your project name is.</span>
   <span class="text-center">
     <img src="../_img/docs/extract_zip_rename_folder_win.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on Windows." class="filter-img filter-nov filter-win" />
     <img src="../_img/docs/extract_zip_rename_folder_mac.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on OSX." class="filter-img filter-nov filter-mac" />
