--- a/index.dev.html
+++ b/index.dev.html
@@ -40,6 +40,24 @@
     <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script>window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>')</script>
+
+    <script>
+        $(document).ready(function(){
+            $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases", function(x){
+                for (var i = 0; i < x.length; i++) {
+                    if (x[i].assets[0]) {
+                        var v = x[i].tag_name;
+                        var d = x[i].assets[0].browser_download_url;
+                        $(".b").attr("href", d);
+                        $(".v").html(v);
+                        return;
+                    }
+                }
+            });
+        });
+    </script>
   </head>
   <body class="d">
     <table class="t">
@@ -50,7 +68,7 @@
           <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
           <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
           <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
-          <a href="https://github.com/UniversalGUI/UGUI/releases/download/v1.1.1/ugui_1.1.1.zip" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI v1.1.1</a>
+          <a href="https://github.com/UniversalGUI/UGUI/releases" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI <span class="v">v1.0.0</span></a>
           <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
         </td>
       </tr>
