--- a/index.dev.html
+++ b/index.dev.html
@@ -41,17 +41,17 @@
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script>window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>')</script>
-
     <script>
+        window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>');
         $(document).ready(function(){
             $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases", function(x){
                 for (var i = 0; i < x.length; i++) {
-                    if (x[i].assets[0]) {
-                        var v = x[i].tag_name;
-                        var d = x[i].assets[0].browser_download_url;
-                        $(".b").attr("href", d);
-                        $(".v").html(v);
+                    var d = x[i].assets[0],
+                        n = 1024,
+                        r = 100;
+                    if (d) {
+                        $(".b").attr("href", d.browser_download_url).attr("title", d.name + " (" + (Math.round(d.size/n/n*r)/r) +" MB)");
+                        $(".v").html(x[i].tag_name);
                         return;
                     }
                 }
