--- a/404.dev.html
+++ b/404.dev.html
@@ -19,35 +19,35 @@
     <meta name="application-name"                content="UGUI"                                             />
     <meta name="msapplication-navbutton-color"   content="#FFFFFF"                                          />
     <meta name="msapplication-TileColor"         content="#FFFFFF"                                          />
-    <meta name="msapplication-square70x70logo"   content="_img/meta/mstile01sm.png"                         />
-    <meta name="msapplication-square150x150logo" content="_img/meta/mstile02md.png"                         />
-    <meta name="msapplication-wide310x150logo"   content="_img/meta/mstile03wd.png"                         />
-    <meta name="msapplication-square310x310logo" content="_img/meta/mstile04lg.png"                         />
+    <meta name="msapplication-square70x70logo"   content="/_img/meta/mstile01sm.png"                        />
+    <meta name="msapplication-square150x150logo" content="/_img/meta/mstile02md.png"                        />
+    <meta name="msapplication-wide310x150logo"   content="/_img/meta/mstile03wd.png"                        />
+    <meta name="msapplication-square310x310logo" content="/_img/meta/mstile04lg.png"                        />
     <meta name="apple-mobile-web-app-title"      content="UGUI"                                             />
     <meta name="apple-mobile-web-app-capable"    content="no"     /> <!-- "yes" hides Safari navbar in iOS -->
     <meta name="apple-touch-fullscreen"          content="no"                                               />
     <meta name="apple-mobile-web-app-status-bar-style" content="black"                                      />
-    <link rel="apple-touch-icon"             href="_img/meta/apl-57.png"  type="image/png" sizes="57x57"    />
-    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-57.png"  type="image/png" sizes="57x57"    />
-    <link rel="apple-touch-icon"             href="_img/meta/apl-72.png"  type="image/png" sizes="72x72"    />
-    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-72.png"  type="image/png" sizes="72x72"    />
-    <link rel="apple-touch-icon"             href="_img/meta/apl-114.png" type="image/png" sizes="114x114"  />
-    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-114.png" type="image/png" sizes="114x114"  />
-    <link rel="apple-touch-icon"             href="_img/meta/apl-144.png" type="image/png" sizes="144x144"  />
-    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-144.png" type="image/png" sizes="144x144"  />
-    <link rel="apple-touch-startup-image"    href="_img/meta/apl-str.png" type="image/png"                  />
-    <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                  />
-    <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
-    <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
-    <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
+    <link rel="apple-touch-icon"             href="/_img/meta/apl-57.png"  type="image/png" sizes="57x57"    />
+    <link rel="apple-touch-icon-precomposed" href="/_img/meta/apl-57.png"  type="image/png" sizes="57x57"    />
+    <link rel="apple-touch-icon"             href="/_img/meta/apl-72.png"  type="image/png" sizes="72x72"    />
+    <link rel="apple-touch-icon-precomposed" href="/_img/meta/apl-72.png"  type="image/png" sizes="72x72"    />
+    <link rel="apple-touch-icon"             href="/_img/meta/apl-114.png" type="image/png" sizes="114x114"  />
+    <link rel="apple-touch-icon-precomposed" href="/_img/meta/apl-114.png" type="image/png" sizes="114x114"  />
+    <link rel="apple-touch-icon"             href="/_img/meta/apl-144.png" type="image/png" sizes="144x144"  />
+    <link rel="apple-touch-icon-precomposed" href="/_img/meta/apl-144.png" type="image/png" sizes="144x144"  />
+    <link rel="apple-touch-startup-image"    href="/_img/meta/apl-str.png" type="image/png"                  />
+    <link rel="fluid-icon"                   href="/_img/meta/fluid.png"   type="image/png"                  />
+    <link rel="icon"                         href="/favicon.ico"           type="image/x-icon"               />
+    <link rel="shortcut icon"                href="/favicon.ico"           type="image/ico"                  />
+    <link rel="stylesheet"                   href="/_style/style.css"      type="text/css"                   />
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script src="_scripts/router.js"></script>
+    <script src="/_scripts/router.js"></script>
   </head>
   <body class="d">
     <table class="t">
       <tr>
         <td>
-          <a href="index.html"><img src="_img/404.png" alt="404 Styled similar to the UGUI Logo" /></a>
+          <a href="/index.html"><img src="/_img/404.png" alt="404 Styled similar to the UGUI Logo" /></a>
           <h3 style="margin-bottom:200px">404: Page not found</h3>
         </td>
       </tr>
