--- a/download/index.html
+++ b/download/index.html
@@ -41,7 +41,7 @@
     <link rel="shortcut icon"                href="../favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script>window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>')</script>
 
     <script>
         $(document).ready(function(){
@@ -83,6 +83,13 @@
                     downloadCount = downloadCount + totalDownloads[i];
                 }
                 $("#output").after('<p>The official releases of UGUI have been downloaded <strong>' + downloadCount + '</strong> times.</p>');
+            });
+
+            $.get("/_markup/nav.html", function(y){
+                $("body").prepend(y);
+                $("#ugui-nav").addClass("text-center navbar navbar-default").css("font-size","0px");
+                $("#ugui-nav a").addClass("btn btn-default").css("margin","10px");
+                $("#ugui-nav a[href='/download']").addClass("btn-primary");
             });
         });
     </script>
