--- a/index.dev.html
+++ b/index.dev.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>');
+        window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');
         $(document).ready(function(){
             $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases", function(x){
                 for (var i = 0; i < x.length; i++) {
@@ -54,6 +54,9 @@
                         return;
                     }
                 }
+            });
+            $.get("/_markup/nav.html", function(y){
+                $("body").prepend(y);
             });
         });
     </script>
