--- a/_markup/nav.html
+++ b/_markup/nav.html
@@ -1,7 +1,9 @@
 <nav id="ugui-nav">
   <a href="/index.html" title="UGUI.io">Home</a> |
-  <a href="/download" title="Download Archive and Annotated Source Code">Download</a> |
+  <a href="/download" title="Download Archive">Download</a> |
   <a href="/api" title="API Documentation">API Docs</a> |
   <a href="/tutorials/getting-started.htm" title="Getting Started with UGUI">Tutorials</a> |
-  <a href="http://github.com/UniversalGUI/UGUI" title="UGUI on GitHub">Fork UGUI</a>
+  <!-- <a href="/spotlight" title="Showcase of apps made with UGUI">Spotlight</a> | -->
+  <a href="http://github.com/UniversalGUI/UGUI" title="View Source Code for UGUI on GitHub">Source</a> |
+  <a href="/source" title="The most well commented code in the history of ever!">Annotated Source</a>
 </nav>
