--- a/_markup/nav.html
+++ b/_markup/nav.html
@@ -2,7 +2,7 @@
   <a href="/index.html" title="UGUI.io">Home</a> |
   <a href="/download" title="Download Archive">Download</a> |
   <a href="/api" title="API Documentation">API Docs</a> |
-  <a href="/tutorials/getting-started.htm" title="Getting Started with UGUI">Tutorials</a> |
+  <a href="/tutorials/index.html" title="Getting Started with UGUI">Tutorials</a> |
   <!-- <a href="/spotlight" title="Showcase of apps made with UGUI">Spotlight</a> | -->
   <a href="http://github.com/UniversalGUI/UGUI" title="View Source Code for UGUI on GitHub">GitHub</a> |
   <a href="/source" title="The most well commented code in the history of ever!">Annotated Source</a>
