--- a/index.dev.html
+++ b/index.dev.html
@@ -68,7 +68,7 @@
           <a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a>
           <h3>Universal Graphical User Interface</h3>
           <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
-          <p>More specifically UGUI is a <em>library</em> and <strong>framework</strong> for <a href="thejaredwilcurt.github.io/website">NW.js</a>.</p>
+          <p>More specifically UGUI is a <em>library</em> and <strong>framework</strong> for <a href="http://thejaredwilcurt.github.io/website">NW.js</a>.</p>
           <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
           <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
           <a href="https://github.com/UniversalGUI/UGUI/releases" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI <span class="v">v1.0.0</span></a>
