--- a/index.dev.html
+++ b/index.dev.html
@@ -38,44 +38,63 @@
     <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                  />
     <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
-    <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
+
+    <!--UPDATE THE STYLESHEET TO ORIGINAL STYLE.CSS-->
+    <!-- <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   /> -->
+    <link rel="stylesheet"                   href="_style/stylesm.css"      type="text/css"                   />
+    <!--UPDATE THE STYLESHEET TO ORIGINAL STYLE.CSS-->
+
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');
-        $(document).ready(function(){
-            $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases", function(x){
-                for (var i = 0; i < x.length; i++) {
-                    var d = x[i].assets[0],
-                        n = 1024,
-                        r = 100;
-                    if (d) {
-                        $(".b").attr("href", d.browser_download_url).attr("title", d.name + " (" + (Math.round(d.size/n/n*r)/r) +" MB)");
-                        $(".v").html(x[i].tag_name);
-                        return;
-                    }
-                }
-            });
-            $.get("/_markup/nav.html", function(y){
-                $("body").prepend(y);
-            });
-        });
-    </script>
+    <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');</script>
   </head>
-  <body class="d">
-    <table class="t">
-      <tr>
-        <td>
-          <a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a>
-          <h3>Universal Graphical User Interface</h3>
-          <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
-          <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
-          <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
-          <a href="https://github.com/UniversalGUI/UGUI/releases" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI <span class="v">v1.0.0</span></a>
-          <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
-        </td>
-      </tr>
-    </table>
-    <a href="http://github.com/UniversalGUI/UGUI" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="position:absolute;top:0;border:0;right:0" fill="#911146" color="#ED8C2B"><path d="M0 0l115 115h15l12 27 108 108v-250z"/><path d="M128.3 109c-14.5-9.3-9.3-19.4-9.3-19.4 3-6.9 1.5-11 1.5-11-1.3-6.6 2.9-2.3 2.9-2.3 3.9 4.6 2.1 11 2.1 11-2.6 10.3 5.1 14.6 8.9 15.9" fill="#ED8C2B" style="transform-origin:130px 106px" class="octo-arm"/><path d="M115 115c-.1.1 3.7 1.5 4.8.4l13.9-13.8c3.2-2.4 6.2-3.2 8.5-3-8.4-10.6-14.7-24.2 1.6-40.6 4.7-4.6 10.2-6.8 15.9-7 .6-1.6 3.5-7.4 11.7-10.9 0 0 4.7 2.4 7.4 16.1 4.3 2.4 8.4 5.6 12.1 9.2 3.6 3.6 6.8 7.8 9.2 12.2 13.7 2.6 16.2 7.3 16.2 7.3-3.6 8.2-9.4 11.1-10.9 11.7-.3 5.8-2.4 11.2-7.1 15.9-16.4 16.4-30 10-40.6 1.6.2 2.8-1 6.8-5 10.8l-11.7 11.6c-1.2 1.2.6 5.4.8 5.3z" fill="#ED8C2B" class="octo-body"/></svg></a>
+  <body>
+    <nav>
+        <img src="_img/meta/apl-57.png">
+        <a href="#">Home</a>
+        <a href="#">Templates</a>
+        <a href="#">Documentation</a>
+        <a href="#">Tutorials</a>
+        <a href="#">Showcase</a>
+<!--Below, created a class called nav-right because originally floated the elements. In CSS instead I gave it a larger margin. Leaving the class in here just in case it actually does need to be used in the CSS later-->
+        <a href="#" class="nav-right get">Get UGUI</a>
+        <a href="#" class="nav-right">Fork on GitHub</a>
+    </nav>
+    <div class="banner">
+        <img src="_img/logo.png">
+        <h3>Universal Graphical User Interface</h3>
+<!-- Used <strong> tags below instead of <b> or styling in the CSS based on looking up best practices online. -->
+         <p>UGUI gives a face to command-line applications using HTML, CSS, &amp; Javascript. This site is <strong>under construction</strong>, but you can check out the <a href="#">UGUI project on Github</a> or be an early member to our new <a href="#">community forum</a> on Reddit. </p>
+    </div>
+    <div class="center">
+        <div class="middle">
+            <img src="http://i.imgur.com/V7hTCwi.png">
+            <span class="caption">Fast</span>
+        </div>
+        <div class="middle">
+            <img src="http://i.imgur.com/V7hTCwi.png">
+            <span class="caption">Free</span>
+        </div>
+         <div class="middle">
+            <img src="http://i.imgur.com/V7hTCwi.png">
+            <span class="caption">Open Source</span>
+        </div>
+         <div class="middle">
+            <img src="http://i.imgur.com/V7hTCwi.png">
+            <span class="caption">Cross-Platform</span>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="os">
+            <span>Placeholder for actual content. This is where Apple, Windows, Linux tabs will exist.</span>
+        </div>
+        <div class="screenshots">
+            <span>123256326346</span>
+        </div>
+<!--When to use class vs. IDs in divs?-->
+        <div id="get-started">
+            <a href="#" class="start">Get Started!</a>
+        </div>
+    </div>
   </body>
-  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-67786036-1','auto');ga('send','pageview');</script>
+  <!--<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-67786036-1','auto');ga('send','pageview');</script>-->
 </html>
