Corrected class name in HTML

--- a/index.dev.html
+++ b/index.dev.html
@@ -56,7 +56,7 @@
         <a href="#">Tutorials</a>
         <a href="#">Showcase</a>
 <!--Below, created a class called nav-right because originally floated the elements. In CSS instead I gave it a larger margin. Leaving the class in here just in case it actually does need to be used in the CSS later-->
-        <a href="#" class="nav-right get">Get UGUI</a>
+        <a href="#" class="nav-right start">Get UGUI</a>
         <a href="#" class="nav-right">Fork on GitHub</a>
     </nav>
     <div class="banner">
